Stylization optimizations and clean up

--- a/styles/component-styles/contacts.css
+++ b/styles/component-styles/contacts.css
@@ -19,10 +19,11 @@
 }
 
 .contacts ul li span {
-  display: inline-block;
   width: 100%;
+  display: inline-block;
 }
 
+/* MOUSE */
 @media (any-pointer:  fine) {
   .contacts ul li a:hover {
     text-decoration: none;
