--- a/styles/typography.css
+++ b/styles/typography.css
@@ -2,6 +2,16 @@
 
 html {
     font: 12px/1.5 'system-ui', 'sans-serif';
+    
+    /* TABLET */
+    @media (min-width: 768px) {
+        font-size: 14px;
+    }
+
+    /* DESKTOP */
+    @media (min-width: 1024px) {
+        font-size: 16px;
+    }
 }
 
 body,
