--- a/styles/component-styles/education.css
+++ b/styles/component-styles/education.css
@@ -6,8 +6,13 @@
 }
 
 .education label {
-  display: inline-block;
   width: 100%;
+  display: inline-block;
+
+  /* TABLET */
+  @media (min-width: 768px) {
+    width: calc(50% - 1rem);
+  }
 }
 
 .education label article {
@@ -30,8 +35,8 @@
 .education input:nth-of-type(1):checked~label:nth-of-type(1) .toggle-content,
 .education input:nth-of-type(2):checked~label:nth-of-type(2) .toggle-content,
 .education input:nth-of-type(3):checked~label:nth-of-type(3) .toggle-content {
-  background-color: var(--primary-color);
   color: var(--secondary-color);
+  background-color: var(--primary-color);
   border: 1px solid var(--secondary-color);
 }
 
@@ -45,10 +50,11 @@
   list-style: none;
 }
 
+/* MOUSE */
 @media (any-pointer:  fine) {
   .education label  article:hover h4 { 
-    background-color: var(--primary-color);
     color: var(--secondary-color);
+    background-color: var(--primary-color);
     border-radius: 1rem 1rem 0 0;
   }
 }
