--- a/styles/component-styles/experience.css
+++ b/styles/component-styles/experience.css
@@ -4,6 +4,33 @@
   border: 1px solid var(--primary-color);
 }
 
+.work-experience article {
+  /* TABLET */
+  @media (min-width: 768px) {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding-left: 1rem;
+  }
+}
+
+.work-experience article header {
+  /* TABLET */
+  @media (min-width: 768px) {
+    width: 100%;
+  }
+}
+
+.work-experience article details {
+  /* TABLET */
+  @media (min-width: 768px) {
+    width: calc(50% - 1rem);
+    height: fit-content;
+    margin: 0;
+  }
+}
+
 .work-experience details summary {
   padding: 1rem;
   border-radius: 1rem;
@@ -16,14 +43,14 @@
 }
 
 .work-experience details label {
-  transition: height 1s;
   height: 50%;
   cursor: pointer;
+  transition: height 1s;
 }
 
 .work-experience details label p {
-  margin: 0 2rem 2rem;
   display: -webkit-box;
+  margin: 0 2rem 2rem;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -32,20 +59,32 @@
 .work-experience input:nth-of-type(1):checked~label:nth-of-type(1),
 .work-experience input:nth-of-type(2):checked~label:nth-of-type(2),
 .work-experience input:nth-of-type(3):checked~label:nth-of-type(3) {
+  height: 100%;
   display: block;
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
   padding: 1rem;
   background-color: var(--secondary-color);
+}
+
+.work-experience input:checked~label .toggle-content  {
+  display: block;
 }
 
 .work-experience input:nth-of-type(1):checked~label:nth-of-type(1) .toggle-content:nth-of-type(1),
 .work-experience input:nth-of-type(2):checked~label:nth-of-type(2) .toggle-content:nth-of-type(2),
 .work-experience input:nth-of-type(3):checked~label:nth-of-type(3) .toggle-content:nth-of-type(3) {
-  background-color: var(--primary-color);
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.work-experience input:nth-of-type(1):checked~label:nth-of-type(1) .toggle-content:nth-of-type(1):hover,
+.work-experience input:nth-of-type(2):checked~label:nth-of-type(2) .toggle-content:nth-of-type(2):hover,
+.work-experience input:nth-of-type(3):checked~label:nth-of-type(3) .toggle-content:nth-of-type(3):hover {
   color: var(--secondary-color);
+  background-color: var(--primary-color);
   border: 1px solid var(--secondary-color);
 }
 
@@ -70,6 +109,7 @@
   margin-bottom: 0.5rem;
 }
 
+/* MOUSE */
 @media (any-pointer:  fine) {
   .work-experience details:hover summary {
     color: var(--secondary-color);
