--- a/styles/component-styles/footer.css
+++ b/styles/component-styles/footer.css
@@ -1,33 +1,34 @@
 .static-container footer {
+    height: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5rem;
     color: var(--secondary-color);
     background-color: var(--primary-color);
 }
 
 .static-container footer .go-to-top {
+    width: 3rem;
+    height: 3rem;
     position: fixed;
     bottom: 1rem;
     right: 1rem;
     display: flex;
     justify-content: center;
-    width: 3rem;
-    height: 3rem;
-    border: 0.2rem solid var(--primary-color);
-    background-color: var(--secondary-color);
     color: var(--primary-color);
+    background-color: var(--secondary-color);
+    border: 0.2rem solid var(--primary-color);
     border-radius: 1rem;
     font-size: 1.5rem;
     transition: 1s all;
 }
 
+/* MOUSE */
 @media (any-pointer:  fine) {
     .static-container footer .go-to-top:hover {
         scale: 1.5;
-        border: 0.2rem solid var(--secondary-color);
-        background-color: var(--primary-color);
         color: var(--secondary-color);
+        background-color: var(--primary-color);
+        border: 0.2rem solid var(--secondary-color);
     }
   }
