--- a/styles/component-styles/skills.css
+++ b/styles/component-styles/skills.css
@@ -4,11 +4,32 @@
   padding: 0 1rem;
 }
 
+.skills .skills-container {
+  /* TABLET */
+  @media (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+}
+
+.skills .skills-container h3{
+  /* TABLET */
+  @media (min-width: 768px) {
+    width: 100%;
+  }
+}
+
 .skills .skills-container div {
+  position: relative;
+  margin-bottom: 1rem;
   border: 1px solid var(--primary-color);
   border-radius: 1rem;
-  margin-bottom: 1rem;
-  position: relative;
+
+  /* TABLET */
+  @media (min-width: 768px) {
+    width: calc(50% - 1rem);
+  }
 }
 
 .skills .skills-container p:first-of-type {
@@ -21,19 +42,19 @@
 }
 
 .skills .skills-container div h4 {
+  width: 100%;
+  height: 100%;
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
   opacity: 1;
+  margin: 0;
   background-color: var(--secondary-color);
   border: 1px solid var(--primary-color);
   border-radius: 1rem;
-  transition: width 1s, height 1s, opacity 1s;
   cursor: pointer;
-  margin: 0;
+  transition: width 1s, height 1s, opacity 1s;
 }
 
 .skills .skills-container div:nth-child(odd) input:nth-of-type(1):checked~label h4 {
@@ -48,13 +69,14 @@
 }
 
 .skills .skills-container div input:nth-of-type(1):checked~label h4 {
-  background-color: var(--primary-color);
   color: var(--secondary-color);
+  background-color: var(--primary-color);
 }
 
+/* MOUSE */
 @media (any-pointer:  fine) {
   .skills .skills-container div h4:hover {
-    background-color: var(--primary-color);
     color: var(--secondary-color);
+    background-color: var(--primary-color);
   }
 }
