--- a/styles/layout.css
+++ b/styles/layout.css
@@ -2,20 +2,24 @@ html {
   scroll-behavior: smooth;
   user-select: none;
   -moz-user-select: none;
+  color: var(--text-color);
+}
+
+html:has(article:not(.education, .skills) input[type=checkbox]:checked) {
+  overflow: hidden;
 }
 
 .dynamic-container {
   display: flex;
   width: 100%;
   min-height: calc(100vh - 10rem);
-
   /* TABLET */
   @media (min-width: 768px) {
     flex-wrap: wrap;
   }
 
   /* DESKTOP */
-  @media (min-width: 1366px) {
+  @media (min-width: 1024px) {
     max-width: 85rem;
     margin: 0 auto;
   }
@@ -34,25 +38,30 @@ html {
 
 .dynamic-container main section {
   scroll-margin-top: 11rem;
+
+  /* TABLET */
+  @media (min-width: 768px) {
+    scroll-margin-top: 3rem;
+  }
+}
+
+.dynamic-container main section:after {
+  width: 100%;
+  display: inline-block;
+  padding: 1rem 0;
+  text-align: center;
+  color: var(--primary-color);
+  content: "\2756\2756\2756";
 }
 
 .dynamic-container main section h2,
 .dynamic-container main section h3,
 .dynamic-container main section h4,
 .dynamic-container main section h5 {
-  text-align: center;
   margin-bottom: 1rem;
   padding: 0 2rem;
-  color: var(--primary-color);
-}
-
-.dynamic-container main section:after {
-  display: inline-block;
-  width: 100%;
-  padding: 1rem 0;
   text-align: center;
   color: var(--primary-color);
-  content: "\2756\2756\2756";
 }
 
 .dynamic-container aside {
@@ -87,4 +96,24 @@ input {
 .dynamic-container:has(.work-experience input[type=checkbox]:checked) + .static-container footer a,
 .dynamic-container:has(.courses-and-ceriticates input[type=checkbox]:checked) + .static-container footer a {
   z-index: -1;
+}
+
+.toggle-content {
+  width: fit-content;
+  height: auto;
+  display: none;
+  margin: 1rem auto;
+  padding: 1rem;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 1rem;
+
+  /* TOUCH SCREEN */
+  @media (any-pointer: coarse) {
+      display: block;
+  }
+}
+
+.toggle-content::after {
+  content: "Read more!";
 }
