Creating projects sections and styles

--- a/styles/components.css
+++ b/styles/components.css
@@ -4,6 +4,7 @@
 @import url('component-styles/experience.css');
 @import url('component-styles/education.css');
 @import url('component-styles/cources-and-certificates.css');
+@import url('component-styles/projects.css');
 @import url('component-styles/languages.css');
 @import url('component-styles/contacts.css');
 @import url('component-styles/skills.css');
