--- a/styles/component-styles/experience.css
+++ b/styles/component-styles/experience.css
@@ -60,6 +60,7 @@
 .work-experience input:nth-of-type(2):checked~label:nth-of-type(2),
 .work-experience input:nth-of-type(3):checked~label:nth-of-type(3) {
   height: 100%;
+  width: 100%;
   display: block;
   position: fixed;
   top: 0;
@@ -75,7 +76,6 @@
 .work-experience input:nth-of-type(1):checked~label:nth-of-type(1) .toggle-content:nth-of-type(1),
 .work-experience input:nth-of-type(2):checked~label:nth-of-type(2) .toggle-content:nth-of-type(2),
 .work-experience input:nth-of-type(3):checked~label:nth-of-type(3) .toggle-content:nth-of-type(3) {
-  color: var(--primary-color);
   background-color: var(--secondary-color);
   border: 1px solid var(--primary-color);
 }
