--- a/styles/definitions.css
+++ b/styles/definitions.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #808080;
-  --secondary-color: #d3d3d3;
-  --text-color: #000000;
+  --primary-color: #204020;
+  --secondary-color: #F0F0F0;
+  --text-color: #075c07;
 }
