--- a/styles/component-styles/cources-and-certificates.css
+++ b/styles/component-styles/cources-and-certificates.css
@@ -174,10 +174,10 @@
   opacity: 0;
 }
 
-.courses-and-ceriticates .carousel-container input:nth-of-type(1):checked~.carousel-indicators label:nth-of-type(1),
-.courses-and-ceriticates .carousel-container input:nth-of-type(2):checked~.carousel-indicators label:nth-of-type(2),
-.courses-and-ceriticates .carousel-container input:nth-of-type(3):checked~.carousel-indicators label:nth-of-type(3),
-.courses-and-ceriticates .carousel-container input:nth-of-type(4):checked~.carousel-indicators label:nth-of-type(4) {
+.courses-and-ceriticates .carousel-container slot input:nth-of-type(1):checked~.carousel-indicators label:nth-of-type(1),
+.courses-and-ceriticates .carousel-container slot input:nth-of-type(2):checked~.carousel-indicators label:nth-of-type(2),
+.courses-and-ceriticates .carousel-container slot input:nth-of-type(3):checked~.carousel-indicators label:nth-of-type(3),
+.courses-and-ceriticates .carousel-container slot input:nth-of-type(4):checked~.carousel-indicators label:nth-of-type(4) {
   border: 2px solid var(--primary-color);
   background-color: var(--secondary-color);
 }
