--- a/styles/component-styles/aside.css
+++ b/styles/component-styles/aside.css
@@ -13,7 +13,12 @@ aside .aside-menu {
   flex-direction: column;
 }
 
-aside .aside-menu a{
+aside .aside-menu select {
+  cursor: pointer;
+}
+
+aside .aside-menu a,
+aside .aside-menu-language-select{
  padding: 1rem 1rem;
  text-align: center;
  color: var(--secondary-color);
@@ -22,10 +27,12 @@ aside .aside-menu a{
  text-decoration: none;
 }
 
-aside .aside-menu a:hover{
+aside .aside-menu a:hover,
+aside .aside-menu-language-select:hover{
   color: var(--primary-color);
   background-color: var(--secondary-color);
   border: 1px solid var(--primary-color);
   text-decoration: none;
- }
+}
+ 
  
