--- a/styles/component-styles/footer.css
+++ b/styles/component-styles/footer.css
@@ -8,10 +8,20 @@
 }
 
 .static-container footer .go-to-top {
+    bottom: 1rem;
+    font-size: 1.5rem;
+}
+
+.static-container footer .footer-language-select {
+    cursor: pointer;
+    bottom: 6rem;
+}
+
+.static-container footer .go-to-top,
+.static-container footer .footer-language-select {
     width: 3rem;
     height: 3rem;
     position: fixed;
-    bottom: 1rem;
     right: 1rem;
     display: flex;
     justify-content: center;
@@ -19,16 +29,18 @@
     background-color: var(--secondary-color);
     border: 0.2rem solid var(--primary-color);
     border-radius: 1rem;
-    font-size: 1.5rem;
     transition: 1s all;
+    outline: none;
 }
 
 /* MOUSE */
-@media (any-pointer:  fine) {
-    .static-container footer .go-to-top:hover {
+@media (any-pointer: fine) {
+
+    .static-container footer .go-to-top:hover,
+    .static-container footer .footer-language-select:hover {
         scale: 1.5;
         color: var(--secondary-color);
         background-color: var(--primary-color);
         border: 0.2rem solid var(--secondary-color);
     }
-  }
+}
