Adding spinner styles

--- a/styles/components.css
+++ b/styles/components.css
@@ -9,3 +9,4 @@
 @import url('component-styles/contacts.css');
 @import url('component-styles/skills.css');
 @import url('component-styles/footer.css');
+@import url('component-styles/spinner.css');
