--- a/styles/components.css
+++ b/styles/components.css
@@ -10,3 +10,4 @@
 @import url('component-styles/skills.css');
 @import url('component-styles/footer.css');
 @import url('component-styles/spinner.css');
+@import url('component-styles/error.css');
